{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 41,
  "lineage": "e7b29408-a4fb-b379-e87a-c5ace8075975",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/networkInterfaces/checkpoint-single-gw-terraform-eth0",
            "internal_domain_name_suffix": "2y1dqztnth1erpi0l5zsv2et3d.px.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/publicIPAddresses/checkpoint-single-gw-terraform",
                "subnet_id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-single-gw-vnet/subnets/checkpoint-single-gw-terraform-frontend-subnet"
              }
            ],
            "location": "australiaeast",
            "mac_address": "00-0D-3A-D0-28-CC",
            "name": "checkpoint-single-gw-terraform-eth0",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "checkpoint-single-gw-terraform",
            "virtual_machine_id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Compute/virtualMachines/checkpoint-single-gw-terraform"
          },
          "dependencies": [
            "azurerm_public_ip.public-ip",
            "module.common.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet",
            "random_id.randomId"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/networkInterfaces/checkpoint-single-gw-terraform-eth1",
            "internal_domain_name_suffix": "2y1dqztnth1erpi0l5zsv2et3d.px.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig2",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-single-gw-vnet/subnets/checkpoint-single-gw-terraform-backend-subnet"
              }
            ],
            "location": "australiaeast",
            "mac_address": "00-0D-3A-D0-21-88",
            "name": "checkpoint-single-gw-terraform-eth1",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "checkpoint-single-gw-terraform",
            "virtual_machine_id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Compute/virtualMachines/checkpoint-single-gw-terraform"
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "security_group_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/networkInterfaces/checkpoint-single-gw-terraform-eth0|/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/networkSecurityGroups/checkpoint-single-gw-terraform-nsg",
            "network_interface_id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/networkInterfaces/checkpoint-single-gw-terraform-eth0",
            "network_security_group_id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/networkSecurityGroups/checkpoint-single-gw-terraform-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_public_ip.public-ip",
            "module.common.azurerm_resource_group.resource_group",
            "module.network-security-group.azurerm_network_security_group.nsg",
            "module.network-security-group.azurerm_network_security_rule.security_rule",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet",
            "random_id.randomId"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "checkpoint-single-gw-terraform-9a9d3fea710c5a8a",
            "fqdn": "checkpoint-single-gw-terraform-9a9d3fea710c5a8a.australiaeast.cloudapp.azure.com",
            "id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/publicIPAddresses/checkpoint-single-gw-terraform",
            "idle_timeout_in_minutes": 30,
            "ip_address": "4.197.172.229",
            "ip_version": "IPv4",
            "location": "australiaeast",
            "name": "checkpoint-single-gw-terraform",
            "resource_group_name": "checkpoint-single-gw-terraform",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group",
            "random_id.randomId"
          ]
        }
      ]
    },
    {
      "module": "module.network-security-group[0]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/networkSecurityGroups/checkpoint-single-gw-terraform-nsg",
            "location": "australiaeast",
            "name": "checkpoint-single-gw-terraform-nsg",
            "resource_group_name": "checkpoint-single-gw-terraform",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowAnyCustom22Outbound",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow all inbound connections",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAllInBound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.network-security-group[0]",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "security_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow all inbound connections",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/networkSecurityGroups/checkpoint-single-gw-terraform-nsg/securityRules/AllowAllInBound",
            "name": "AllowAllInBound",
            "network_security_group_name": "checkpoint-single-gw-terraform-nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "checkpoint-single-gw-terraform",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group",
            "module.network-security-group.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/routeTables/checkpoint-single-gw-terraform-backend-subnet",
            "location": "australiaeast",
            "name": "checkpoint-single-gw-terraform-backend-subnet",
            "resource_group_name": "checkpoint-single-gw-terraform",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "To-Internet",
                "next_hop_in_ip_address": "10.0.2.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-single-gw-vnet/subnets/checkpoint-single-gw-terraform-backend-subnet"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/routeTables/checkpoint-single-gw-terraform-frontend-subnet",
            "location": "australiaeast",
            "name": "checkpoint-single-gw-terraform-frontend-subnet",
            "resource_group_name": "checkpoint-single-gw-terraform",
            "route": [
              {
                "address_prefix": "10.0.0.0/16",
                "name": "To-Internal",
                "next_hop_in_ip_address": "10.0.1.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "name": "Local-Subnet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              }
            ],
            "subnets": [
              "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-single-gw-vnet/subnets/checkpoint-single-gw-terraform-frontend-subnet"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-single-gw-vnet/subnets/checkpoint-single-gw-terraform-frontend-subnet",
            "name": "checkpoint-single-gw-terraform-frontend-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "checkpoint-single-gw-terraform",
            "virtual_network_name": "checkpoint-single-gw-vnet"
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-single-gw-vnet/subnets/checkpoint-single-gw-terraform-backend-subnet",
            "name": "checkpoint-single-gw-terraform-backend-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "checkpoint-single-gw-terraform",
            "virtual_network_name": "checkpoint-single-gw-vnet"
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "security_group_backend_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-single-gw-vnet/subnets/checkpoint-single-gw-terraform-backend-subnet",
            "network_security_group_id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/networkSecurityGroups/checkpoint-single-gw-terraform-nsg",
            "subnet_id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-single-gw-vnet/subnets/checkpoint-single-gw-terraform-backend-subnet"
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group",
            "module.network-security-group.azurerm_network_security_group.nsg",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "security_group_frontend_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-single-gw-vnet/subnets/checkpoint-single-gw-terraform-frontend-subnet",
            "network_security_group_id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/networkSecurityGroups/checkpoint-single-gw-terraform-nsg",
            "subnet_id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-single-gw-vnet/subnets/checkpoint-single-gw-terraform-frontend-subnet"
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group",
            "module.network-security-group.azurerm_network_security_group.nsg",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "backend_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-single-gw-vnet/subnets/checkpoint-single-gw-terraform-backend-subnet",
            "route_table_id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/routeTables/checkpoint-single-gw-terraform-backend-subnet",
            "subnet_id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-single-gw-vnet/subnets/checkpoint-single-gw-terraform-backend-subnet"
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_route_table.backend",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "frontend_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-single-gw-vnet/subnets/checkpoint-single-gw-terraform-frontend-subnet",
            "route_table_id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/routeTables/checkpoint-single-gw-terraform-frontend-subnet",
            "subnet_id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-single-gw-vnet/subnets/checkpoint-single-gw-terraform-frontend-subnet"
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_route_table.frontend",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "663836e6-996d-48f6-bd1a-5ff32af093eb",
            "id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-single-gw-vnet",
            "location": "australiaeast",
            "name": "checkpoint-single-gw-vnet",
            "resource_group_name": "checkpoint-single-gw-terraform",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-single-gw-vnet/subnets/checkpoint-single-gw-terraform-frontend-subnet",
                "name": "checkpoint-single-gw-terraform-frontend-subnet",
                "security_group": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/networkSecurityGroups/checkpoint-single-gw-terraform-nsg"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/virtualNetworks/checkpoint-single-gw-vnet/subnets/checkpoint-single-gw-terraform-backend-subnet",
                "name": "checkpoint-single-gw-terraform-backend-subnet",
                "security_group": "/subscriptions/bfd72569-9b75-4584-b5fb-9db73fe697c9/resourceGroups/checkpoint-single-gw-terraform/providers/Microsoft.Network/networkSecurityGroups/checkpoint-single-gw-terraform-nsg"
              }
            ]
          },
          "dependencies": [
            "module.common.azurerm_resource_group.resource_group"
          ]
        }
      ]
    }
  ]
}